# ChangeLog for app-portage/overlay-utils
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  19 Feb 2008; Jakub Moc <jakub@gentoo.org> overlay-utils-0.2-r2.ebuild:
  Make the sed expression actually readable

  17 Feb 2008; (Tommy[D]) tommy100@gmx.de +overlay-utils-0.2-r2.ebuild:
  Use own echangelog-tng to have svn cp/mv working

  06 Jan 2008; Tiago Cunha (tcunha) <me@tiagocunha.org>
  overlay-utils-0.2-r1.ebuild:
  Added ~sparc keyword

  07 Nov 2007; Jakub Moc <jakub@gentoo.org> -overlay-utils-0.2.ebuild:
  Nuke old

  06 Nov 2007; Nathan Smith (ndansmith) <ndansmith@gmail.com>
  overlay-utils-0.2-r1.ebuild:
  Added ~ppc keyword

  12 Jul 2007; Alex Tarkovsky <alextarkovsky@gmail.com>
  -overlay-utils-0.1.ebuild, +overlay-utils-0.2-r1.ebuild:
  Adjusted path to functions.sh for baselayout-2 users; using echangelog from
  gentoolkit-dev instead of provided echangelog-tng; nuking obsolete 0.1

  10 Mar 2007; Peter Weller <welp@gentoo.org> overlay-utils-0.2.ebuild:
  Keyworded ~x86-fbsd

  13 Nov 2006; Piotr Jaroszyński <peper@gentoo.org>
  overlay-utils-0.2.ebuild:
  Add ~amd64.

  05 Nov 2006; Alex Tarkovsky <alextarkovsky@gmail.org>
  +overlay-utils-0.2.ebuild:
  Updated to work with the changed =~ operator semantics in Bash 3.2, at least
  until upstream changes them again.

  20 Oct 2006; Christian Faulhammer (opfer) <gentoo@faulhammer.org>
  overlay-utils-0.1.ebuild:
  added trailing slash to HOMEPAGE URL

  02 Sep 2006; Josu López Fernández <zamorate@zamorate.net>
  overlay-utils-0.1.ebuild:
  Added ~amd64 and ~ppc keywords

  31 Aug 2006; Alex Tarkovsky <alextarkovsky@gmail.org>
  files/digest-overlay-utils-0.1, Manifest:
  New digest for fixed tarball

  31 Aug 2006; Alex Tarkovsky <alextarkovsky@gmail.org> ChangeLog:
  Initial commit, contains sunrise-commit and svn-enabled version of echangelog
