@@ -1,5 +1,4 @@
 DIST overlay-utils-0.2.tar.bz2 9997 RMD160 d40e51c85e8eab34d5bf4f542db9401d77c82e0d SHA1 d1b3637cc943b90935c63ef5467680a096176445 SHA256 16fdabba962975d90484299badd1afd38e4921e0af7627120d9393e577155e5f
-EBUILD overlay-utils-0.2-r1.ebuild 752 RMD160 67a24f288d34d50d4108c4c35366c4923d71d49a SHA1 965d8f47d8804a35eff8e8ec144850e261883a6f SHA256 cca64180536f2ba8a87a1b989cd9b5ea3f7e9a4983e13538344d6ff88b6b3215
 EBUILD overlay-utils-0.2-r2.ebuild 661 RMD160 33a85e77a50a406cba2adbf3093e0553b1d29473 SHA1 6ac9c3f34e8a98255742e21124639e29f48385d3 SHA256 fc153985e3a247e29ef852315c5039b4711ba4ac6fdca288ee7256ec73e610ab
-MISC ChangeLog 1877 RMD160 76a2dd8c2df0c829988c592faab7a2f355fe512f SHA1 d9af1b8e41c002050eeee2d438d6314610a214eb SHA256 3d5ef9ab936c671a2f61dbe2756a619569007a08cf0c9f0623687c95988710ab
+MISC ChangeLog 1970 RMD160 0b5e31da37c50ffe311d582deac2a14040ebb34a SHA1 fde0daa64151c792a58e697f5f9af6f6fc049e8a SHA256 ae12f337a1c3e7ef7dcade3ad23a7dab7c4affe059e3e28c53e667f654348733
 MISC metadata.xml 170 RMD160 645927a396fdc21cdeb089fe42c5397332420ea6 SHA1 ac7f48a14fec325926f9ce1be8fbf1f311b4f2e4 SHA256 d797a2ec6f9dc516c9f9c1a758ee87ad3e8c43101b5dc76c2f872d5bd4639b42
