@@ -2,6 +2,10 @@
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  11 Mar 2008; Markus Ullmann <jokey@gentoo.org>
+  -overlay-utils-0.2-r1.ebuild:
+  Drop old
+
   19 Feb 2008; Jakub Moc <jakub@gentoo.org> overlay-utils-0.2-r2.ebuild:
   Make the sed expression actually readable
 
